<resources>
    <string name="app_name">TaskApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="profile">Profile</string>
    <string name="write_your_name">Write your name</string>
    <string name="to_do_list">To-do list!</string>
    <string name="Description">Here you can write down something important or make a schedule for tomorrow:)</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="sort">sort</string>
    <string name="setting">setting</string>
    <string name="phone_number">Phone number</string>
    <string name="send">Send</string>
    <string name="Delete">Delete</string>
    <string name="Message">Are you sure you want to delete it?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="enter_code">Enter code</string>
    <string name="confirm">Confirm</string>
</resources>