<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.onBoard.OnBoardPageFragment"
    android:background="#DAD3C8">

    <ImageView
        android:id="@+id/img_board"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:src="@drawable/img"/>

    <TextView
        android:id="@+id/tv_to_do"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/to_do_list"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_board" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/Description"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_to_do" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="20dp"
        android:text="@string/next"
        app:layout_constraintTop_toBottomOf="@id/tv_description"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/black"
        android:paddingVertical="14dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        app:cornerRadius="64dp"
        android:text="@string/start"
        app:layout_constraintTop_toBottomOf="@id/tv_description"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/black"
        android:paddingVertical="14dp"
        android:layout_marginEnd="64dp"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"/>

    <TextView
        android:id="@+id/btn_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        app:layout_constraintTop_toBottomOf="@+id/tv_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="32dp"/>
<!--    -->
</androidx.constraintlayout.widget.ConstraintLayout>